--- a/styles/main.css
+++ b/styles/main.css
@@ -1,23 +1,62 @@
-.topnav{
-    background-color: #333;
-    overflow: hidden;
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
-.topnav a{
+header {
+    background-color: #f1f1f1;
+    font-family: 'segoe ui';
+    width: 100%;
+    overflow: hidden;
+    position: fixed;
+}
+
+.topnav {
+    float: right;
+}
+
+.topnav a {
+    padding: 15px;
     float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    text-align: center;
+    border-radius: 4px;
+    color: black;
 }
 
+/*  */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
-  color: white;
+    background-color: dodgerblue;
+    color: white;
+}
+
+@media screen and (max-width: 500px) {
+    header h1 {
+        width: 100%;
+    }
+
+    .topnav {
+        width: 100%;
+        float: inline-start;
+    }
+
+    .topnav a {
+        float: none;
+        display: block;
+    }
+}
+
+header h1 {
+    float: left;
+    padding: 10px 16px;
+    font-size: 25px;
+    text-align: center;
+    justify-content: center;
 }
