--- a/styles/main.css
+++ b/styles/main.css
@@ -5,32 +5,37 @@
 }
 
 header {
-    background-color: #f1f1f1;
+    background-color: #333;
     font-family: 'segoe ui';
     width: 100%;
     overflow: hidden;
-    position: fixed;
+    padding: 0.2%;
 }
 
 .topnav {
     float: right;
+    text-align: center;
 }
 
 .topnav a {
-    padding: 15px;
+    padding-top: 7px;
     float: left;
+    display: block;
     text-decoration: none;
-    font-size: 17px;
-    text-align: center;
     border-radius: 4px;
-    color: black;
+    text-align: center;
+    color: white;
+    height: 40px;
+    width: 50px;
 }
+
 
 /*  */
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
+
 
 .topnav a.active {
     background-color: dodgerblue;
@@ -44,19 +49,57 @@ header {
 
     .topnav {
         width: 100%;
-        float: inline-start;
+
     }
 
     .topnav a {
-        float: none;
-        display: block;
+        width: 100%;
+        display: inline-block;
     }
 }
 
+
 header h1 {
     float: left;
-    padding: 10px 16px;
+    padding: 5px;
     font-size: 25px;
     text-align: center;
-    justify-content: center;
+    color: white;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.flexgrid{
+    display: flex;
+    flex: none;
+}
+.sidebar{
+    flex:30%;
+    margin-top: 5px;
+    margin-right: 2.5px;
+    margin-left: 2%;
+}
+.sidebar ul{
+    text-align: center;
+    border: 1px solid #dddddd;
+    list-style-type: none;
+}
+.configsection{
+    flex: 70%;
+    margin-top: 5px;
+    margin-left: 2.5px;
+    margin-right: 2%;
 }
