--- a/styles/main.css
+++ b/styles/main.css
@@ -71,11 +71,14 @@ table {
   border-collapse: collapse;
   width: 100%;
 }
-
+tr{
+    height: 38;
+    text-align: center;
+}
 td, th {
+  width: 33%;
   border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+  height: 38px;
 }
 
 tr:nth-child(even) {
@@ -87,7 +90,7 @@ tr:nth-child(even) {
     flex: none;
 }
 .sidebar{
-    flex:30%;
+    flex:20%;
     margin-top: 5px;
     margin-right: 2.5px;
     margin-left: 2%;
@@ -99,8 +102,58 @@ tr:nth-child(even) {
     height: 100%;
 }
 .configsection{
-    flex: 70%;
+    flex: 80%;
     margin-top: 5px;
     margin-left: 2.5px;
     margin-right: 2%;
+}
+.switch{
+      position: relative;
+        display: inline-block;
+     width: 120px;
+      height: 34px;
+}
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  font-size: 26px;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(86px);
+  -ms-transform: translateX(86px);
+  transform: translateX(86px);
 }
